--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product-category.scss
@@ -233,8 +233,13 @@
           @include icon('sort', after);
         }
 
+        .filter-icon {
+          @include icon('filter', after);
+        }
+
         @include media('>=md') {
-          .sort-icon {
+          .sort-icon,
+          .filter-icon {
             visibility: hidden;
           }
         }
