--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product-trade.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product-trade.scss
@@ -88,12 +88,16 @@
         @include icon('sort', after);
       }
 
+      .filter-icon {
+        @include icon('filter', after);
+      }
+
       @include media('>=md') {
-        .sort-icon {
+        .sort-icon,
+        .filter-icon {
           visibility: hidden;
         }
       }
-
     }
 
     .view-content {
