VYRKCATG-332: Fixed the sticky header positioning.

--- a/source/themes/custom/crescenttool/styles/libraries/block/product-buy-now-sticky.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/block/product-buy-now-sticky.scss
@@ -139,3 +139,10 @@
     }
   }
 }
+
+// For logged in-specific styling differences
+.user-logged-in .block-product-buy-now-sticky__content {
+  .block--ct-product-buy-now-sticky {
+    margin-top: -2.8rem;
+  }
+}
