VYRKCATG-325: Trying to fix the no search results footer.

--- a/source/themes/custom/crescenttool/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/search-index.scss
@@ -137,6 +137,7 @@
 .region-post-content {
   margin-left: 0 !important;
   margin-right: 0 !important;
+  margin-top: 5rem;
   max-width: 100%;
   padding-bottom: 3.75rem;
   width: 100%;
@@ -151,7 +152,6 @@
 
 .region-post-content {
   background-color: $primary-red;
-  margin-bottom: -5rem;
   position: relative;
 
   .view-search__header-product-results {
@@ -159,7 +159,6 @@
   }
 
   .block-views-blockacquia-search-block-1 {
-
     .node__content {
       color: $white;
       height: 100%;
