VYRKCATG-333: Fixed CT footer link color.

--- a/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
@@ -176,6 +176,10 @@ $footer-bp-mobile: '<sm';
     @include container($margin: 0);
     color: $white;
 
+    a {
+      @include link(light, hover);
+    }
+
     .region-footer-second__content {
       .block-webform-block__title {
         border-bottom: unset;
