YouTubeAndHeroSlider: Fixed the YouTube videos on product pages and fixed the hero slider title image field background.

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--hero-slide.scss
@@ -86,7 +86,8 @@
     }
   }
 
-  .component-hero-slide__content-container {
+  .component-hero-slide__content-container,
+  .component-hero-slide__title-image {
     background-color: rgba($black, 0.6);
     box-sizing: border-box;
     margin: 0;
