VYRKCATG-332: Further sticky header improvements.

--- a/source/themes/custom/crescenttool/styles/libraries/region/header.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/region/header.scss
@@ -823,6 +823,7 @@ $mobile-menu-item-button-height: 7rem;
 
     .region-header__content:not(.region-header__content-large) {
       height: $header-height-small;
+      margin-bottom: 0.8rem;
 
       .block--header-menu-main {
         .menu-item--depth-0 {
