VYRKCATG-327b: Tightened up the option spacing.

--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product-brand.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product-brand.scss
@@ -214,6 +214,10 @@
           padding-bottom: 1rem;
           padding-left: 1.75rem;
         }
+
+        .form-item {
+          margin-bottom: 0.5rem !important;
+        }
       }
     }
 
