VYRKCATG-225: Fixed Price Spider link focus issues.

--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
@@ -127,21 +127,18 @@
           line-height: 1.625;
           font-weight: $fw-bold;
 
-          &:hover,
-          &:focus {
+          &:hover {
             color: $white;
             font-weight: $fw-bold;
           }
         }
 
-        &:hover,
-        &:focus {
+        &:hover {
           background-color: $gray-50;
         }
       }
 
-      &:hover,
-      &:focus {
+      &:hover {
         color: $primary-red;
         background-color: $gray-20;
         border-width: 1px;
