--- a/source/themes/custom/gearwrench/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/teaser--product.scss
@@ -119,15 +119,13 @@
         line-height: 1.625;
         font-weight: $fw-bold;
 
-        &:hover,
-        &:focus {
+        &:hover {
           font-weight: $fw-bold;
         }
       }
     }
 
-    &:hover,
-    &:focus {
+    &:hover {
       color: $primary-orange;
       background-color: $black;
 
