VYRKCATG-225: Added a fix for CT focus. Also added a way to prevent the PriceSpider modal from hopping to the top of the page.

--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
@@ -115,6 +115,10 @@
       border-bottom-left-radius: rem(25px);
       border-bottom-right-radius: rem(25px);
 
+      &:focus {
+        background-color: $primary-red !important;
+      }
+
       @include media('<md') {
         font-size: rem(13px) !important;
       }
