VYRKCATG-225: Fixed the Banner CTA slider.

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--banner-cta-slider.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--banner-cta-slider.scss
@@ -328,11 +328,11 @@
     position: relative;
     width: 100%;
 
-    @include media('<lg-plus') {
-      margin-top: rem(50px);
+    @include media('<lg') {
+      margin-top: 2rem;
     }
 
-    @include media('>=lg-plus') {
+    @include media('>=lg') {
       display: none;
     }
 
