VYRKCATG-225: Fixed weird focus isse for Buy Now button on both sites.

--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_button.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_button.scss
@@ -103,8 +103,7 @@
     }
   }
 
-  &:hover,
-  &:focus {
+  &:hover {
     background-color: $gray-50;
     border-radius: 0;
     border-bottom-left-radius: rem(25px);
