--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_on-event.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_on-event.scss
@@ -11,14 +11,12 @@
   @if $self {
     &,
     &:hover,
-    &:active,
-    &:focus {
+    &:active {
       @content;
     }
   } @else {
     &:hover,
-    &:active,
-    &:focus {
+    &:active {
       @content;
     }
   }
