--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-2-column.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-2-column.scss
@@ -22,6 +22,25 @@
   }
 
   .field__items {
+    .component-content__title {
+      @include type-header(
+        $version: h3,
+        $color: $black,
+        $globals: included
+      );
+      text-transform: unset;
+
+      @include media('<sm') {
+        @include type-header(
+          $version: h4,
+          $color: $black,
+          $globals: included
+        );
+        padding: 0;
+        margin: 0;
+      }
+    }
+
     @include media('>=md') {
       @include flex();
 
